--- a/apps/vagrant/infra-docker-registry-ui/deploy/secret/config.yml
+++ b/apps/vagrant/infra-docker-registry-ui/deploy/secret/config.yml
@@ -2,48 +2,74 @@
 listen_addr: 0.0.0.0:8000
 # Base path of Docker Registry UI.
 base_path: /
-# Registry URL with schema and port.
-registry_url: https://docker-registry.infra-docker-registry.svc.cluster.local
-# Verify TLS certificate when using https.
-verify_tls: true
-# Docker registry credentials.
-# They need to have a full access to the registry.
-# If token authentication service is enabled, it will be auto-discovered and those credentials
-# will be used to obtain access tokens.
-# When the registry_password_file entry is used, the password can be passed as a docker secret 
-# and read from file. This overides the registry_password entry.
-registry_username: docker_registry_ui
-registry_password: ENC[AES256_GCM,data:pxVXeXTEv6A=,iv:sompzP5b6PZJhdBTzkunWMCB26zsoJL3uiBFNdpLvvY=,tag:TInknreHPNEsn38sJOV3xQ==,type:str]
-# registry_password_file: /run/secrets/registry_password_file
-# Event listener token.
-# The same one should be configured on Docker registry as Authorization Bearer token.
-event_listener_token: ENC[AES256_GCM,data:4oZ4o/PPkOwy2ypUQ5YGBOQTXS2UMCjtgD8ICrnycoo=,iv:OHW8A7MG9PUloaK7PHmtslV2wTEBZdTIdJd0l1AHe08=,tag:ohyrTkoU7L6MXTZYryPuSQ==,type:str]
-# Retention of records to keep.
-event_retention_days: 7
-# Event listener storage.
-event_database_driver: sqlite3
-event_database_location: data/registry_events.db
-# event_database_driver: mysql
-# event_database_location: user:password@tcp(localhost:3306)/docker_events
-# Cache refresh interval in minutes.
-# How long to cache repository list and tag counts.
-cache_refresh_interval: 10
-# If users can delete tags. If set to False, then only admins listed below.
-anyone_can_delete: true
-# Users allowed to delete tags.
-# This should be sent via X-WEBAUTH-USER header from your proxy.
-admins:
-    - user
-# Debug mode. Affects only templates.
-debug: false
-# How many days to keep tags but also keep the minimal count provided no matter how old.
-purge_tags_keep_days: 30
-purge_tags_keep_count: 2
-# Enable built-in cron to schedule purging tags in server mode.
-# Empty string disables this feature.
-# Example: '25 54 17 * * *' will run it at 17:54:25 daily.
-# Note, the cron schedule format includes seconds! See https://godoc.org/github.com/robfig/cron
-purge_tags_schedule: '@daily'
+# Background tasks.
+performance:
+    # Catalog list page size. It depends from the underlying storage performance.
+    catalog_page_size: 100
+    # Catalog (repo list) refresh interval in minutes.
+    # If set to 0 it will never refresh but will run once.
+    catalog_refresh_interval: 10
+    # Tags counting refresh interval in minutes.
+    # If set to 0 it will never run. This is fast operation.
+    tags_count_refresh_interval: 60
+# Registry endpoint and authentication.
+registry:
+    # Registry hostname (without protocol but may include port).
+    hostname: docker-registry.infra-docker-registry.svc.cluster.local
+    # Allow to access non-https enabled registry.
+    insecure: false
+    # Registry credentials.
+    # They need to have a full access to the registry.
+    # If token authentication service is enabled, it will be auto-discovered and those credentials
+    # will be used to obtain access tokens.
+    username: docker_registry_ui
+    password: ENC[AES256_GCM,data:ylifRwyTnyY=,iv:fd7VkE1sh11xzvgXf0bz62PHO0tJYoecjlpBvmQyCRY=,tag:2Ht1spMNUVg5yN3pN4sz5g==,type:str]
+    # Set password to '' in order to read it from the file below. Otherwise, it is ignored.
+    #password_file: /run/secrets/registry_password_file
+    # Alternatively, you can do auth with Keychain, useful for local development.
+    # When enabled the above credentials will not be used.
+    auth_with_keychain: false
+# UI access management.
+access_control:
+    # Whether users can the event log. Otherwise, only admins listed below.
+    anyone_can_view_events: true
+    # Whether users can delete tags. Otherwise, only admins listed below.
+    anyone_can_delete_tags: true
+    # The list of users to do everything.
+    # User identifier should be set via X-WEBAUTH-USER header from your proxy
+    # because registry UI itself does not employ any auth.
+    admins:
+        - user
+# Event listener configuration.
+event_listener:
+    # The same token should be configured on Docker registry as Authorization Bearer token.
+    bearer_token: ENC[AES256_GCM,data:6ogwhUCo0uncG0dFcH+GiyVtNkDYP1L8iGW3r3oIQVU=,iv:mZkYrYdbPWQdvjzSYCtAXezyJijCeRvODKSWohgJrbg=,tag:5NtmMA70X3OWp5oU/uWPzg==,type:str]
+    # Retention of records to keep.
+    retention_days: 7
+    # Event listener storage.
+    database_driver: sqlite3
+    database_location: data/registry_events.db
+    # database_driver: mysql
+    # database_location: user:password@tcp(localhost:3306)/docker_events
+    # You can disable event deletion on some hosts when you are running registry UI on MySQL master-master or
+    # cluster setup to avoid deadlocks or replication breaks.
+    deletion_enabled: true
+# Options for tag purging.
+purge_tags:
+    # How many days to keep tags but also keep the minimal count provided no matter how old.
+    keep_days: 90
+    keep_count: 10
+    # Keep tags matching regexp no matter how old, e.g. '^latest$'
+    # Empty string disables this feature.
+    keep_regexp: ""
+    # Keep tags listed in the file no matter how old.
+    # File format is JSON: {"repo1": ["tag1", "tag2"], "repoX": ["tagX"]}
+    # Empty string disables this feature.
+    keep_from_file: ""
+# Debug mode.
+debug:
+    # Affects only templates.
+    templates: false
 sops:
     kms: []
     gcp_kms: []
@@ -53,14 +79,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJWUZsYzhtaEdpbEFmVWNy
-            TXpnRHJNK3NYMnA4UVAxNkZoZXdsNFhVQVdNCkxjS1RGYU1zd3h0Q0IzUjZmVzdL
-            cUVaamFaNlNod2p5bVBGLzA5Q3dLeGMKLS0tIDBxclhPWHJUd3RoWUFRN3U3VlNi
-            VXpTR1Y3TVV3L2VqcWhmN2ZxUjJ1Z3cK70EwAlR5lFSBt97aY6q6t5+jAtpuVhLZ
-            AhzzH4EmWXoDx8M5ijGT0QslA3hINQRwhtvpgsNWut+VkPGol+iupw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2VGF4RVFTNE4vMDR2bjcz
+            K29Bd2FqWjYxNVF5K3FMU2FodHd6dUt6RVhvClhkZzRpVnhrL2oyME1vcEp1eXZV
+            eFZ6QVN3WmlZaW1aSUpYYWV2K3RudmsKLS0tIEQvZ2ozalpqaDN0TkY4c1c2bThK
+            VzBJaEVOa29SaVg4MlpIMk9zazRHcDAK8X9cnsP6fkNyBVr2V6fbESBA8iay/9Ty
+            QRF/J+BESg6XSfBy3czDPeQI4LQ78UMf+IvJ1KBMzqIiClqSPYcNow==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-01T09:26:53Z"
-    mac: ENC[AES256_GCM,data:yZwFlEnWHZGkDYAgfkOoCraRE7tCHO0+vGFewuRdT1n+dCFW1dDSsgRwtIqmiTvU5Vpza/vQPS7RNjMqV+YN7JU6a0nDbjuwKRHyoqmn6n499P6p8beBsqtxfKZFWjTyfl3iKrQUOCCyT3MY/8y95ubYuOhi1u3w6zKQXamehJc=,iv:lZDDQqikeNfScutZBgo7Wk+SLkHWy3Qv9SpL2mL32js=,tag:qwvbH7GwnseFwfOS/Ylifg==,type:str]
+    lastmodified: "2024-11-01T20:08:09Z"
+    mac: ENC[AES256_GCM,data:bLGgiryeBRhzG7GxsvcVOh+J4ElZv3MzvFIM6qNfueI7mFWAgOsMrHBCLb4LXRKPikzL5ZralGCXt/95LYjQV4Sh6u8y02DEV0wEO4PMnx9J4ySSuDQSzvclrkz9J2f+xelUpSvl0pcTuranPwan+LcJeRyeUTf2CfErL4FffuQ=,iv:3M2yLYYlOfyfZT6BolJtnZUXVMdTBtkeHHfhvUYnT0g=,tag:NgvqhdurRxtbj3SwhEYOEQ==,type:str]
     pgp: []
-    encrypted_regex: ^(registry_password|event_listener_token)$
+    encrypted_regex: ^(password|bearer_token)$
     version: 3.7.3
