--- a/apps/base/infra-docker-registry-ui/deploy/deployment.yaml
+++ b/apps/base/infra-docker-registry-ui/deploy/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: docker-registry-ui
-        image: "registry.lan/docker-registry-ui:0.9.7"
+        image: "registry.lan/registry-ui:0.10.3"
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
