--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-docker-registry-ui.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-docker-registry-ui.yaml
@@ -1,10 +1,10 @@
 watchers:
   - type: docker_registry
     repo: registry-1.docker.io
-    image: quiq/docker-registry-ui
-    tag: 0.9.7
+    image: quiq/registry-ui
+    tag: 0.10.3
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
-      - 0\.[0-8]\.
-      - 0\.9\.[0-6]$
+      - 0\.[0-9]\.
+      - 0\.10\.[0-2]$
