--- a/apps/base/infra-zonemta/deploy/mongo/kustomization.yaml
+++ b/apps/base/infra-zonemta/deploy/mongo/kustomization.yaml
@@ -6,7 +6,7 @@ labels:
     pairs:
       app.kubernetes.io/name: zonemta
       app.kubernetes.io/component: mongo
-      app.kubernetes.io/version: 7.0.12-jammy
+      app.kubernetes.io/version: 8.0.3-noble
 
 generatorOptions:
  disableNameSuffixHash: true
