--- a/apps/base/infra-zonemta/deploy/mongo/statefulSet.yaml
+++ b/apps/base/infra-zonemta/deploy/mongo/statefulSet.yaml
@@ -24,7 +24,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: mongo
-        image: "registry.lan/zonemta-mongo:7.0.12-jammy"
+        image: "registry.lan/zonemta-mongo:8.0.3-noble"
         imagePullPolicy: IfNotPresent
         envFrom:
         - secretRef:
