--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
@@ -2,7 +2,7 @@ watchers:
   - name: ZoneMTA
     type: github_tag
     repo: zone-eu/zone-mta
-    tag : v3.9.6
+    tag : v3.10.0
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -22,25 +22,24 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mongo
-    tag: 7.0.12-jammy
+    tag: 8.0.3-noble
     includes:
       - '[0-9]+\.[0-9]+.[0-9]+-.*'
     excludes:
       - .*rc.*
       - .*-(nanoserver|windowsservercore).*$
       - .*-focal$
-      - ^[0-6]\..*
-      - ^7\.0\.[0-9]-.*
-      - ^7\.0\.1[0-1]-.*
+      - ^[0-7]\..*
+      - ^8\.0\.[0-2]-.*
   - name: "ZoneMTA Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 22.6.0-alpine3.20
+    tag: 23.1.0-alpine3.20
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*-alpine3.1[0-9]
       - 1[0-9]\..*
-      - 2[0-1]\..*
-      - 22\.[0-5]\..*
+      - 2[0-2]\..*
+      - 23\.[0]\..*
