--- a/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
+++ b/apps/base/tool-syncthing/deploy/discovery/statefulSet.yaml
@@ -24,14 +24,14 @@ spec:
           type: RuntimeDefault
       containers:
       - name: discovery
-        image: "registry.lan/syncthing-discosrv:1.27.10"
+        image: "registry.lan/syncthing-discosrv:1.28.0"
         command: [
           "/bin/entrypoint.sh", 
           "/bin/stdiscosrv", 
-          "-http", 
-          "-listen=:8080",
-          "-metrics-listen=:8081",
-          #"-debug",
+          "--http", 
+          "--listen=:8080",
+          "--metrics-listen=:8081",
+          #"--debug",
         ]
         ports:
         - containerPort: 8080
