--- a/apps/base/monitoring-grafana/deploy/kustomization.yaml
+++ b/apps/base/monitoring-grafana/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: grafana
       app.kubernetes.io/component: grafana
-      app.kubernetes.io/version: 11.1.3
+      app.kubernetes.io/version: 11.2.1
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -41,6 +41,7 @@ configMapGenerator:
   - config/dashboards/kube-prometheus/namespace-by-workload.json
   - config/dashboards/kube-prometheus/node-cluster-rsrc-use.json
   - config/dashboards/kube-prometheus/node-rsrc-use.json
+  - config/dashboards/kube-prometheus/nodes-aix.json
   - config/dashboards/kube-prometheus/nodes-darwin.json
   - config/dashboards/kube-prometheus/nodes.json
   - config/dashboards/kube-prometheus/persistentvolumesusage.json
