--- a/apps/base/cluster-reloader/deploy/manifests/deployment.yaml
+++ b/apps/base/cluster-reloader/deploy/manifests/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: reloader-reloader
     spec:
       containers:
-        - image: "ghcr.io/stakater/reloader:latest"
+        - image: "ghcr.io/stakater/reloader:v1.3.0"
           imagePullPolicy: IfNotPresent
           name: reloader-reloader
           env:
@@ -25,10 +25,12 @@ spec:
               valueFrom:
                 resourceFieldRef:
                   resource: limits.cpu
+                  divisor: '1'
             - name: GOMEMLIMIT
               valueFrom:
                 resourceFieldRef:
                   resource: limits.memory
+                  divisor: '1'
           ports:
             - name: http
               containerPort: 9090
@@ -51,6 +53,13 @@ spec:
             successThreshold: 1
             initialDelaySeconds: 10
           securityContext: {}
+          resources:
+            limits:
+              cpu: "1"
+              memory: 512Mi
+            requests:
+              cpu: 10m
+              memory: 512Mi
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
