--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-tasks.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-tasks.yaml
@@ -3,30 +3,31 @@ watchers:
     type: docker_registry
     repo: quay.io
     image: containers/buildah
-    tag: v1.37.0
+    tag: v1.39.2
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - v0\.
       - v1\.[0-9]\.
       - v1\.[0-2][0-9]\.
-      - v1\.3[0-6]\.
+      - v1\.3[0-8]\.
   - name: "Source fetcher base image"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.0-alpine3.20
+    tag: 3.13.2-alpine3.21
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
+      - .*alpine3\.20
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
   - name: "Source fetcher pyyaml"
     type: pypi
     package: pyyaml
     version: 6.0.1
-    excludes: 
+    excludes:
       - .*[ab][1-9]$
       - .*rc[1-9]$
       - ^[0-6]\..*
