Fix auth-lemonldap probe to avoid error logs

--- a/apps/base/auth-lemonldap/deploy/statefulSet.yaml
+++ b/apps/base/auth-lemonldap/deploy/statefulSet.yaml
@@ -65,6 +65,10 @@ spec:
             scheme: HTTP
             path: /
             port: http
+            httpHeaders:
+            # Use portal hostname to avoid spamming manager-api errors
+            - name: Host
+              value: "lemonldap.auth.web_domain_name"
           initialDelaySeconds: 3
           periodSeconds: 5
         resources:
