--- a/apps/vagrant/auth-lemonldap/deploy/kustomization.yaml
+++ b/apps/vagrant/auth-lemonldap/deploy/kustomization.yaml
@@ -9,6 +9,7 @@ generators:
 
 patches:
 - path: statefulSet-env.yaml
+- path: statefulSet-probe.yaml
 - path: statefulSet-resources.yaml
 - path: service-handler-ip.yaml
 - path: pvc-resources.yaml
